oakGovClone/src/styles/navbar.scss
$mainGreen: #008459;
$hoverSelectGreen: #004a2f;
$mobileGreen: #007953;

// fonts
$subNavLinks: 0.875rem;
$navLinks: 1.375rem;

#navWrapper {
  width: 100%;
}

.notVisible {
  display: none;
}

.trackingNavbarFunctionality {
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  width: 100%;
  height: 80px;
  background-color: $mainGreen;
  z-index: 100;
  padding: 1rem;
  display: flex;
  align-items: center;
  justify-content: space-around;
  color: white;

  // element for the header in the tracking navbar
  h2 {
    animation: linkEntrance 0.5s ease-in-out;
  }

  ul {
    list-style-type: none;
    display: flex;
    align-items: center;
    gap: 2rem;
    transition: 150ms;

    .headerLink {
      text-decoration: none;
      color: white;
    }

    li {
      cursor: pointer;
      font-size: $navLinks;
      display: flex;
      align-items: center;
      position: relative;
      letter-spacing: 2px;
      transition: 150ms;
      color: white;

      &:hover {
        color: rgb(0, 255, 229);
      }
    }

    #trackingFindServiceBtn {
      display: flex;
      align-items: center;
      justify-content: center;
      background-color: white;
      line-height: 0 20px;
      padding: 0 20px;
      transition: 0.15s ease-in-out;
      color: $hoverSelectGreen;
      text-align: center;
      width: 11.6875rem !important;
      height: 45px !important;
      border-radius: 5px;
      font-size: 1rem;
      border: none;
      cursor: pointer;
      transition: 150ms;
      font-weight: bolder;
      animation: linkEntrance 0.5s ease-in-out;
    }

    li {
      color: white;
      font-size: $navLinks;
      letter-spacing: 2px;
      animation: linkEntrance 0.5s ease-in-out;
    }

    @keyframes linkEntrance {
      from {
        opacity: 0;
        transform: translateY(-15px);
      }
      to {
        opacity: 1;
        transform: translateY(0);
      }
    }

    li > a {
      text-decoration: none;
    }
  }
}

#navContainer {
  display: flex;
  flex-direction: column;
  width: 80%;
  position: absolute;
  z-index: 5;

  &.subPageNav {
    background-color: #027952;
    width: 80%;
    position: relative;
    // padding: 1rem;
  }

  // Only on absolute elements
  left: 50%;
  transform: translateX(-50%);

  #subNavBarComponent {
    display: flex;
    justify-content: end;
    margin-top: 1rem;
    margin-bottom: 2rem;

    ul {
      list-style-type: none;
      display: flex;
      gap: 2rem;

      li > a {
        text-decoration: none;
        color: white;
        transition: 150ms;
        &:hover {
          color: rgb(0, 255, 229);
        }
      }
    }
  }

  #navBarComponent {
    color: white;
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-bottom: 1px solid white;
    padding-bottom: 1.5rem;

    #homeAnchorTag {
      text-decoration: none;
      color: white;
      display: flex;
      align-items: center;
      gap: 1rem;
      font-weight: bolder;

      #homeAnchorTagInfo {
        padding-left: 0.5rem;
        border-left: 1px solid white;
      }
    }

    #headerNavLinks {
      ul {
        display: flex;
        gap: 3rem;
        list-style-type: none;

        .headerLink {
          font-size: $navLinks;
          display: flex;
          align-items: center;
          position: relative;
          letter-spacing: 2px;
          cursor: pointer;
          transition: 150ms;
          color: white;
          text-decoration: none;

          &:hover {
            color: rgb(0, 255, 229);
          }
        }

        #findServiceBtn {
          background-color: white;
          line-height: 0 20px;
          padding: 0 20px;
          transition: 0.15s ease-in-out;
          color: $hoverSelectGreen;
          text-align: center;
          width: 11.6875rem !important;
          height: 45px !important;
          border-radius: 5px;
          font-size: 1rem;
          border: none;
          cursor: pointer;
          transition: 150ms;
          font-weight: bolder;

          &:hover {
            scale: 0.99;
            background-color: rgba(216, 255, 243, 0.7);
          }
        }

        #mobileNavBtn {
          display: none;
        }
      }
    }
  }

  #mobileNavContainer {
    display: none;
    flex-direction: column;
    color: white;
  }

  // DROPDOWN
  .dropdown {
    display: flex;
    background-color: #013d27;
    justify-content: center;
    position: absolute;
    top: 9rem;
    right: 0%;
    padding: 2rem;
    max-width: 800px;
    border-radius: 1rem;
    gap: 2rem;

    .dropdownColumn {
      display: flex;
      flex-direction: column;
      gap: 1rem;

      p > a {
        text-decoration: none;
        color: white;
        &:hover {
          color: turquoise;
        }
      }
    }
  }

  .hideDropdown {
    display: none;
  }
}

// Floating Side links
#sideLinks {
  position: fixed;
  z-index: 100;
  right: 0;
  top: 115px;

  ul {
    display: flex;
    flex-direction: column;
    list-style-type: none;
    gap: 5px;

    li {
      display: flex;
      width: 6.875rem;
      height: 3.725rem;
      align-items: center;
      color: $hoverSelectGreen;
      background-color: white;
      padding-left: 0.6875rem;
      border-radius: 11px 0px 0px 11px;
      cursor: pointer;
      transition: 150ms;
      border-bottom: 2px solid $hoverSelectGreen;
      font-weight: bold;
      font-size: 1.1rem;
      line-height: 1.5;

      a {
        text-decoration: none;
        color: #004a2f;
      }

      &:hover {
        background-color: $hoverSelectGreen;
        a {
          color: white;
        }
      }
    }
  }
}

@media (max-width: 1000px) {
  #sideLinks {
    display: none;
  }
}

@media (max-width: 1200px) {
  // Turning Main Nav links invisible and making the hamburger menu

  #navContainer > #navBarComponent > #headerNavLinks {
    ul {
      .headerLink {
        display: none;
        cursor: pointer;
      }

      #mobileNavBtn {
        display: block;
        background: none;
        color: white;
        border: none;
        font-size: 2.5rem;
      }
    }
  }
}

@media (max-width: 768px) {
  #trackingNavbar {
    display: none;
  }

  #navContainer {
    background-color: $mobileGreen;
    left: 0px;
    transform: translateX(0%);
    position: static;
    width: 100%;

    #mobileNavContainer {
      display: flex;

      .mobileNavLayer:nth-of-type(1) {
        height: 55px;
        overflow: hidden;
        display: flex;
        justify-content: space-between;
        align-items: center;
        text-align: center;
        padding: 1rem;

        #mobileNavBtn {
          display: block;
          background: none;
          color: white;
          border: none;
          font-size: 2.5rem;
          cursor: pointer;
        }
      }

      .mobileNavLayer:nth-of-type(2) {
        padding: 10px;
        background-color: #d6e9da;
        max-width: 100%;

        #mobileNavSearchBar {
          width: 100%;
          padding: 0 36px 0 7px;
          line-height: 28px !important;
          border: none;
        }
      }

      .mobileNavLayer:nth-of-type(3) {
        padding: 7px 0;
        text-align: center;
        font-size: 0.875rem !important;
        max-width: 100%;
        line-height: 1.75rem !important;
        * {
          cursor: pointer;
        }
      }
    }
  }

  #navContainer > #subNavBarComponent,
  #navContainer > #navBarComponent {
    display: none;
  }
}

